# Trinity_RL_Environment

./: Dockerfile  README.md  client.py  client_test.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
OneDrive/Desktop/Legacy/OpenEnv Hackathon/: model.py
Server/: app.py  pricing_env.py
server/: app.py
